--- a/style.css
+++ b/style.css
@@ -2,18 +2,61 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #ab88ff;
+  font-family: 'Mulish', sans-serif;
 }
 
-header {
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
   height: 80px;
-  background-color: #21C08B;
-  /* background-color: #00DBDE;
-  background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%); */
+  background-color: #ab88ff;
 }
 
-.header-logo {
+.header__img {
   width: 200px;
-  margin-top: 10px;
-  margin-left: 10px;
+}
+
+.header__menu {
+  margin-right: 60px;
+}
+
+.header__menu ul {
+  display: none;
+  list-style: none;
+  padding: 0;
+  position: absolute;
+  width: 100px;
+  text-align: right;
+  margin: 0px 0px 0px -1px;
+}
+
+.header__menu:hover ul, ul:hover {
+  display: block;
+}
+
+.header__menu li {
+  margin: 10px 0;
+}
+
+.header__menu li a {
+  color: white;
+  text-decoration: none;
+}
+.header__menu li a:hover {
+  text-decoration: underline;
+}
+
+.header__menu--profile {
+  display: flex;
+  color: white;
+  width: 60px;
+}
+
+.header__menu--profile p {
+  margin: 0 0 0 5px;
+  display: flex;
+  align-items: center;
 }
