--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #ab88ff;
+  background-color: #8F57FD;
   font-family: 'Mulish', sans-serif;
 }
 
@@ -12,7 +12,7 @@ body {
   align-items: center;
   width: 100%;
   height: 80px;
-  background-color: #ab88ff;
+  background-color: #8F57FD;
 }
 
 .header__img {
@@ -59,4 +59,37 @@ body {
   margin: 0 0 0 5px;
   display: flex;
   align-items: center;
+}
+
+.main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 300px;
+}
+
+.main__title {
+  color: white;
+  font-size: 22px;
+}
+
+.main__input {
+  width: 70%;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 2px solid white;
+  border-radius: 25px;
+  height: 45px;
+  color: white;
+  font-family: 'Mulish', sans-serif;
+  font-size: 16px;
+  padding: 0 20px;
+  font-weight: bold;
+}
+::placeholder {
+  color: white;
+  /* font-weight: bold; */
+}
+.main__input:focus-visible {
+  outline: none;
 }
