--- a/login.css
+++ b/login.css
@@ -106,7 +106,6 @@ body {
 
 .button {
     color: white;
-    height: 40px;
     border-radius: 25px;
     background-color: rgba(255, 255, 255, 0.3);
     font-size: 16px;
@@ -114,5 +113,8 @@ body {
     cursor: pointer;
     font-family: 'Mulish', sans-serif;
     font-weight: bold;
+    letter-spacing: 1px;
+    height: 50px;
+    margin: 10px 0;
 }
 
