--- a/login.css
+++ b/login.css
@@ -31,6 +31,9 @@ body {
     padding: 60px 68px 40px;
     min-height: 700px;
     width: 300px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
 }
 
 .login__container--form {
@@ -118,3 +121,34 @@ body {
     margin: 10px 0;
 }
 
+.footer {
+    background-color: #AB88FF;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+}
+
+.footer a {
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+    padding-left: 30px;
+    font-size: 14px;
+}
+
+.footer a:hover {
+    text-decoration: underline;
+}
+
+@media only screen and (max-width: 600px) {
+    .login__container {
+        background-color: transparent;
+        border: none;
+        padding: 0;
+    }
+    .footer {
+        align-items: flex-start;
+        flex-direction: column;
+    }
+}
