--- a/style.css
+++ b/style.css
@@ -1,21 +1,33 @@
+* ::-webkit-scrollbar {
+    width: 8px;
+}
+* ::-webkit-scrollbar-track {
+    background: white;
+}
+* ::-webkit-scrollbar-thumb {
+    background-color: rgb(190, 188, 188);
+}
+
+
 body {
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
     background-color: #8F57FD;
     font-family: 'Mulish', sans-serif;
 }
+
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 80px;
+    height: 100px;
     background-color: #8F57FD;
+    top: 0;
 }
 
 .header__img {
+    margin-left: 30px;
     width: 200px;
 }
 
@@ -67,6 +79,7 @@ body {
     justify-content: center;
     flex-direction: column;
     height: 300px;
+    border-radius: 0px 0px 40px 40px;
 }
 
 .main__title {
@@ -99,13 +112,15 @@ body {
     color: white;
     font-size: 14px;
     padding-left: 30px;
+    position: absolute;
 }
 
 .caroucel {
     width: 100%;
-    overflow: scroll;
+    overflow-x: scroll;
     padding: 30px;
     position: relative;
+    box-sizing: border-box;
 }
 
 .caroucel::-webkit-scrollbar {
@@ -113,6 +128,8 @@ body {
 }
 
 .caroucel-container {
+    transition: 450ms transform, 450ms -webkit-transform;
+    font-size: 0;
     white-space: nowrap;
     margin: 70px 0;
     padding-bottom: 10px;
@@ -177,3 +194,27 @@ body {
     opacity: 1;
 }
 
+/* .carousel::-webkit-scrollbar-thumb{ */
+    /* background-color: rgba(255,255,255,0.1); */
+    /* border-radius: 5px; */
+/* } */
+/*  */
+/* .carousel::-webkit-scrollbar { */
+    /* background-color: rgba(255,255,255,0.1); */
+/* } */
+
+.footer {
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    padding-left: 30px;
+}
+
+.footer a {
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+    padding-right: 15px;
+}
